--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -674,12 +674,17 @@
     "**Part 1: Fire Data Analysis (2015-2017)**\n",
     "\n",
     "The City of Birmingham has published data on the number of fires that occurred in each zip code from 2015 to 2017 (https://data.birminghamal.gov/dataset/number-of-fires-by-zip-code-2015-2017/resource/862dca35-edce-4e91-95e0-20fe8235a1cd). \n",
-    "1. Go to the dataset page on the Birmingham Open Data Portal:  \n",
-    "   [Number of Fires by Zip Code (2015-2017)](https://data.birminghamal.gov/dataset/d46de5bf-3454-4349-9d21-26ffa126f787/resource/436af558-0d87-454e-86e5-12adc36acad2/download/number-of-fires-by-zip-codes-2015-2017-csv.csv)\n",
+    "1. Go to the dataset page above on the Birmingham Open Data Portal.\n",
     "\n",
     "2. On the webpage, locate the **Download** button (usually found near the top of the page or next to the dataset description).\n",
     "\n",
-    "3. Download the dataset as a **CSV file** by clicking the **CSV** option under the \"Download\" menu."
+    "3. Download the dataset as a **CSV file** by clicking the **CSV** option under the \"Download\" menu.\n",
+    "\n",
+    "If you have trouble, here is the dataset, but it is good practice to know how to retrieve data on your own since you will need to do that in the future. \n",
+    "\n",
+    "[Number of Fires by Zip Code (2015-2017)](https://data.birminghamal.gov/dataset/d46de5bf-3454-4349-9d21-26ffa126f787/resource/436af558-0d87-454e-86e5-12adc36acad2/download/number-of-fires-by-zip-codes-2015-2017-csv.csv)\n",
+    "\n",
+    "4. After downloading the CSV file, save it in a known location on your local machine (for example, in a folder named \"data\" within your project folder)."
    ]
   },
   {
@@ -691,6 +696,8 @@
    },
    "outputs": [],
    "source": [
+    "#This is an alternative way to save a data file in a folder rather than manually moving it there\n",
+    "\n",
     "# Set the working directory (if not already set to the project root)\n",
     "# setwd(\"/path/to/your/project/folder\")\n",
     "\n",
@@ -706,20 +713,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5c28e4f4-4b29-4a8c-9321-21e9a6c24b05",
-   "metadata": {},
-   "source": [
-    "Import the Dataset into R\n",
-    "\n",
-    "1. After downloading the CSV file, save it in a known location on your local machine (for example, in a folder named \"data\" within your project folder).\n",
-    "\n",
-    "2. Open R or RStudio.\n",
-    "\n",
-    "3. Use the `read.csv()` function to import the dataset into R. Specify the path to the downloaded file as an argument.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ce8190fb-7e1f-4b58-87ce-ed53a7a8642f",
@@ -728,6 +721,8 @@
    },
    "outputs": [],
    "source": [
+    "# Open Jupyter Lab or R or R Studio if you don't have it open already\n",
+    "# Use the `read.csv()` function to import the dataset into R, specifying the path to the file as an argument as needed\n",
     "# Read the CSV file into R\n",
     "fire_data <- read.csv(destfile)\n",
     "\n",
@@ -766,6 +761,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b685762",
+   "metadata": {},
+   "source": [
+    "**Part 3: Generating Electricity**\n",
+    "\n",
+    "Consider the excel data set provided by Alabama Power Company called Lambdas and RTP Customer Loads. Alabama Power’s incremental cost of generating electricity is monitored using the system marginal cost also known as system lambda. Lambda represents the incremental cost of generating one more unit (megawatt-hour) of electricity. In a typical year (non-leap year), there are 8760 hours; thus, this industry often refers to the “8760 lambdas.” As a general rule, generating units that run to help meet peak energy usage on the system are incrementally more expensive to run than baseload plants (those plants that run in both peak and off-peak times).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60cd691b",
+   "metadata": {},
+   "source": [
+    "**Question 1:** Calculate what the average cost was (in dollars per megawatt-hour) for generating electricity from 12am-6am in the year 2018. What about from 6am-12pm in 2018? What conclusion might you make from this comparison?\n",
+    "\n",
+    "**Hints:**\n",
+    "To calculate the average cost (in dollars per megawatt-hour) for generating electricity during specific time periods (e.g., 12am-6am and 6am-12pm) in 2018, you can follow these steps. We'll first merge the relevant hourly columns for each time period and then calculate the averages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "379f4544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load necessary libraries \n",
+    "install.packages(\"tidyverse\")\n",
+    "library (tidyverse)\n",
+    "\n",
+    "# installing package to read Excel file\n",
+    "if (!require(readxl)) {\n",
+    "    install.packages(\"readxl\")\n",
+    "    library(readxl)\n",
+    "}\n",
+    "\n",
+    "# Define the path to the Excel file\n",
+    "file_path <- \"data/Lambdas and RTP Customer Loads.xlsx\"\n",
+    "\n",
+    "# Read the Excel file from the \"data\" subfolder, skipping reading first two rows\n",
+    "lambda_data_2018 <- read_excel(file_path, sheet = \"2018 Lambdas\", skip=2)\n",
+    "\n",
+    "lambda_data #gives a lot of the data, with some dots in the middle \n",
+    "head(lambda_data_2018) #gives a snapshot of first six rows of data\n",
+    "\n",
+    "# Reshape the dataset: Merging hourly columns into a single column\n",
+    "data_long <- lambda_data_2018 %>%\n",
+    "  pivot_longer(cols = starts_with(\"hour\"), # Select columns to merge\n",
+    "               names_to = \"hour\",          # Name for the new column with hour identifiers\n",
+    "               values_to = \"lambda\")       # Name for the new column with lambda values\n",
+    "\n",
+    "# View the reshaped dataset\n",
+    "head(data_long,30) #shows 20 rows of data where it's organized with day, hour, lambda as columns "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "023b1090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the average cost from 12am-6am (hour01 to hour06)\n",
+    "avg_cost_12am_6am <- data_long %>%\n",
+    "  filter(hour %in% paste0(\"hour0\",1:6)) %>%\n",
+    "  summarise(avg_lambda_12am_6am = mean(lambda, na.rm = TRUE))\n",
+    "\n",
+    "avg_cost_12am_6am"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7738e8f",
+   "metadata": {},
+   "source": [
+    "**Question 2:** Calculate the average cost for generating electricity from 12am-6am and from 6am-12pm in the year 2020. What conclusion might you make from this comparison?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "807460af",
    "metadata": {},
    "source": [
@@ -773,14 +848,6 @@
     "\n",
     "   - Write your code in a separate script (.ipynb) and print it as a PDF or HTML file to submit the results on course Canvas website."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "169a4295-ee82-4d93-a919-3e37345e805f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
