--- a/Chapter3MathematicalToolsSectionII.ipynb
+++ b/Chapter3MathematicalToolsSectionII.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "The fact that students scores fall along this distribution allows us to understand how good a certain ACT score is as compared to the rest of the population. UAB has a test-optional admission policy in which students don't have to submit ACT scores but can consider doing so for merit scholarship opportunities. For incoming first-year students, students with ACT scores of 26.5 or above typically have better scholarship opportunities (https://www.uab.edu/admissions/apply/test-optional). \n",
     "\n",
-    "For 2024, the average ACT score in Alabama was 18 (https://www.quadeducationgroup.com/blog/understanding-your-act-score-average-good-highest-act-scores).\n",
+    "For both 2024 and 2025, the average ACT score in Alabama was 18 (https://www.quadeducationgroup.com/blog/understanding-your-act-score-average-good-highest-act-scores).\n",
     "\n",
     "We will answer questions related to this data in this chapter. By the end of this chapter, you will have the skills to calculate probabilities of events, and work with both discrete and continuous distributions for random variables. "
    ]
