--- a/Chapter3MathematicalToolsSectionII.ipynb
+++ b/Chapter3MathematicalToolsSectionII.ipynb
@@ -133,12 +133,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6decc0cd",
+   "id": "c7bb8f42",
    "metadata": {},
    "source": [
-    "##### Your answer:\n",
-    "\n",
-    "\n"
+    "##### Your answer:\n"
    ]
   },
   {
