--- a/Chapter3MathematicalToolsSectionII.ipynb
+++ b/Chapter3MathematicalToolsSectionII.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe68264e",
+   "id": "cafd1674",
    "metadata": {},
    "source": [
     "##### Your answer:\n"
@@ -168,7 +168,7 @@
    "id": "717ed576",
    "metadata": {},
    "source": [
-    "##### Your answer:"
+    "##### Your answer:\n"
    ]
   },
   {
@@ -198,9 +198,9 @@
     "\n",
     "A standard deck of cards has 4 suits (hearts, diamonds, clubs, and spades) with 13 cards in each suit (2,3,...,10, jack, queen, king, ace). Suppose two cards are drawn <em>without</em> replacement. What is the probability of drawing the following?\n",
     "\n",
-    "1. two queens?\n",
+    "1. two queens? \n",
     "2. a queen and then a king? \n",
-    "3. two red cards?\n",
+    "3. two red cards? \n",
     "4. at least one red card?\n",
     "\n",
     "\n",
@@ -688,9 +688,9 @@
    "id": "9e00720a",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-danger\"><b>Student Practice:</b> $z-$Table practice and ACT scores </div>\n",
+    "<div class=\"alert alert-block alert-danger\"><b>Student Practice:</b> z$-$Table practice and ACT scores </div>\n",
     "\n",
-    "Use the $z$-Table to answer the following questions.\n",
+    "Use the *z*$-$Table to answer the following questions.\n",
     "\n",
     "1. Find the area under the standard normal distribution to the left of $z=-2.18$ What about to the right?\n",
     "2. Find the area under the standard normal distribution to the right of $z=0.31$.\n",
@@ -953,7 +953,7 @@
    "metadata": {},
    "source": [
     "<p align=\"center\">\n",
-    "    <img src=\"../pics/chisquaredtable.png\" alt=\"Figure 1\" style=\"width:70%;\"/>\n",
+    "    <img src=\"pics/chisquaredtable.png\" alt=\"Figure 1\" style=\"width:70%;\"/>\n",
     "</p>\n",
     "\n",
     "1. What $\\chi^2$ score corresponds to an to area of 0.9 to the right for a $\\chi^2$ distribution with 20 degrees of freedom? "
@@ -998,7 +998,7 @@
    "source": [
     "<div class=\"alert alert-block alert-danger\"><b>Example:</b> Finding a Sampling Distribution of the Sample Mean </div>\n",
     "\n",
-    "Consider the data set $\\{4,5,6\\}$ from a population of 3 subjects. \n",
+    "Consider the data set $\\{4,6,8\\}$ from a population of 3 subjects. \n",
     "\n",
     "1. Find the mean and standard deviation of the population. \n",
     "2. Take samples of size 2 from the population, with replacement. Calculate the mean of each sample. \n",
